Bug 105131 - After sidebar customization Restore Default doesn't work.
Summary: After sidebar customization Restore Default doesn't work.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-UI-UX
  Show dependency treegraph
 
Reported: 2017-01-05 20:36 UTC by Gülşah Köse
Modified: 2024-09-03 22:03 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gülşah Köse 2017-01-05 20:36:14 UTC
Description:
After sidebar customization Restore Default doesn't work.

Steps to Reproduce:
1. Click Sidebar Settings on Sidebar
2. Select Customization
3. Uncheck Gallery
4. Click Restore Default (at the same submenu)

Actual Results:  
Gallery should be come back

Expected Results:
Nothing happen


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0
Comment 1 Telesto 2017-01-06 13:12:07 UTC
Confirming with:
Version: 5.4.0.0.alpha0+
Build ID: 6bd7451ecd66417a4e8b8dff3874c15ba4d1536e
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-01-05_23:24:16
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 V Stuart Foote 2017-01-06 13:23:42 UTC
Also confirming. On Windows 10 Pro 64-bit en-US with
Version: 5.4.0.0.alpha0+
Build ID: d3c44886c56f401cc18c2ba480131a621d06c781
CPU Threads: 8; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-01-01_09:32:18
Locale: en-US (en_US); Calc: CL
Comment 3 Telesto 2017-01-09 08:50:13 UTC
Also found in:
Versie: 5.3.0.0.alpha1 
Build ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
CPU Threads: 4; Versie besturingssysteem:Windows 6.2; UI Render: standaard; 
Locale: nl-NL (nl_NL); Calc: CL

and in
Versie: 5.2.4.2 
Build ID: 3d5603e1122f0f102b62521720ab13a38a4e0eb0
CPU Threads: 4; Versie besturingssysteem:Windows 6.2; UI Render: standaard; 
Locale: nl-NL (nl_NL); Calc: CL

and in
Version: 5.1.0.3
Build ID: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737
CPU Threads: 4; OS Version: Windows 6.2; UI Render: default; 
Locale: nl-NL (nl_NL)

but not in
Version: 5.0.6.3
Build ID: 490fc03b25318460cfc54456516ea2519c11d1aa
Locale: nl-NL (nl_NL)
Comment 4 Xisco Faulí 2017-01-09 10:30:37 UTC
Regression introduced in range https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=186f365a2c541c51e404b1fa819f35c9152adaf1..01de2fc790b50c04f13907026f1a7782009fea61

I suspect the regression was introduced by:

author	Laurent Godard <lgodard.libre@laposte.net>	2015-08-25 14:38:43 (GMT)
committer	Katarina Behrens <Katarina.Behrens@cib.de>	2015-11-20 13:33:29 (GMT)
commit 536c259cb9644971d0eb0cdfb7d823c5383a5481 (patch)
tree 9f9fd6d655fe9ff492e0f5c317be4d75e21d9ea4
parent ce6170dafe0159e2a1d689133c070b25fa39dd12 (diff)
tdf#67770 store sidebar elements states

Adding Cc: to Laurent Godard
Comment 5 QA Administrators 2018-01-10 03:32:15 UTC Comment hidden (obsolete)
Comment 6 Gülşah Köse 2018-01-10 11:39:29 UTC
Still reproducable LibreOfficeDev 6.1.0.0.alpha0 b9bfda051a4248a0e209fa9fa59a4bfe8a48b853
Comment 7 Jim Raykowski 2018-09-04 02:37:57 UTC
Found this bug report while filing a bug report for this.

The code seems to say that whatever the user checks or unchecks becomes the default. So Restore Default restores to whatever is currently check or unchecked. =?
Comment 8 QA Administrators 2019-09-05 09:34:51 UTC Comment hidden (obsolete)
Comment 9 Jim Raykowski 2019-09-08 22:12:10 UTC
Still repro:

Version: 6.4.0.0.alpha0+
Build ID: 41cd3e8e817c8c33a13608e62eeb06ce2c6977e4
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-09-01_22:30:33
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Maybe just remove the menu item and associated code to solve this?
Comment 10 sdc.blanco 2020-10-01 12:46:14 UTC
reproduced

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 3c6177be2705303044e3de262689d593f3d0f282
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: da-DK (en_DK); UI: en-US
Calc: threaded
Comment 11 andreas_k 2020-10-01 20:47:00 UTC
reproduce but is it that a big deal? I would remove the Restore item from the drop down menu cause it didn't work. as the user know how to disable a sidebar deck, the user know also how to enable.
Comment 12 V Stuart Foote 2020-10-01 22:25:18 UTC
It is appropriate to have a restore defaults action so that short of complete profile reset--users can get to a known state. Which is also a basic a11y issue.
Comment 13 Heiko Tietze 2020-10-05 08:53:36 UTC
Preferably we remove this command as it is a) leading to the wrong assumption the deck(s) itself is/are restored to default (actually the width) and b) resetting the check marks is a bit pointless. So my take: Remove the reset to default menu entry/function.
Comment 14 QA Administrators 2022-10-06 04:09:12 UTC Comment hidden (obsolete)
Comment 15 Commit Notification 2024-08-19 14:29:11 UTC
Olivier Hallot committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dcf23ba463d4c7ea33c5d9fb240d63351e995d7d

tdf#105131 Remove Restore Defaut from sidebar custom menu

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Jim Raykowski 2024-09-03 22:03:36 UTC
I verify the Restore Default item in the sidebar Customization menu is no longer present in:

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 47fbbd7c6b9ea6b4a20f05fdf8870cb9e125fb21
CPU threads: 2; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded