tdf#105131 Remove Restore Defaut from sidebar custom menu

Refer to tdf#105131 comment #13

Change-Id: Ia3b33ed4ab971b6f6dd3c751c5f6e3dc6f30f5da
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171906
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Olivier Hallot <olivier.hallot@libreoffice.org>