include/sfx2/sidebar/TabBar.hxx
@@ -66,7 +66,6 @@ public:
     void RemoveDeckHighlight ();
     OUString const & GetDeckIdForIndex (const sal_Int32 nIndex) const;
     void ToggleHideFlag (const sal_Int32 nIndex);
-    void RestoreHideFlags();
 
     void UpdateFocusManager (FocusManager& rFocusManager);
 
